# Collaborative-Monte-Carlo-Localization

./: HumbleDockerfile  LICENSE  Makefile  README.md
ros_ws/: Demo.sh
ros_ws/data/: Env1.yaml  Env2.yaml  Env3.yaml  cmcl_realA.config  cmcl_realB.config
ros_ws/src/cmcl/cmcl_msgs/: CMakeLists.txt  package.xml
ros_ws/src/cmcl/cmcl_msgs/msg/: Coreset.msg  DET.msg  DistributionExchange.msg  KMeansCluster.msg  Prediction.msg  ProrokClusterAbstraction.msg  RobotDetection.msg
ros_ws/src/cmcl/cmcl_ros/: CMakeLists.txt  package.xml
ros_ws/src/cmcl/cmcl_ros/include/: RosUtils.h
ros_ws/src/cmcl/cmcl_ros/launch/: cmcl_real.launch
ros_ws/src/cmcl/cmcl_ros/ncore/: CMakeLists.txt
ros_ws/src/cmcl/cmcl_ros/ncore/data/config/: cmcl.config
ros_ws/src/cmcl/cmcl_ros/ncore/include/: BeamEnd.h  Cluster.h  ClusterAbstraction.h  DensityEstimationTree.h  DistributionData.h  DistributionExchange.h  FSR.h  GMap.h  GoodPointsCompression.h  KMeansClustering.h  Lidar2D.h  LidarData.h  MCL.h  Particle.h  ParticleFilter.h  ProrokClustering.h  Resampling.h  SetStatistics.h  StandardThinning.h  Utils.h
ros_ws/src/cmcl/cmcl_ros/ncore/src/: BeamEnd.cpp  CMakeLists.txt  Cluster.cpp  ClusterAbstraction.cpp  DensityEstimationTree.cpp  DistributionExchange.cpp  FSR.cpp  GMap.cpp  GoodPointsCompression.cpp  KMeansClustering.cpp  Lidar2D.cpp  MCL.cpp  Particle.cpp  ParticleFilter.cpp  ProrokClustering.cpp  Resampling.cpp  SetStatistics.cpp  StandardThinning.cpp  Utils.cpp  dist_compress.py
ros_ws/src/cmcl/cmcl_ros/ncore/tst/: BenchmarkClustering.cpp  CMakeLists.txt  DumpClustering.cpp  TestUtils.cpp  TestUtils.h  UnitTests.cpp  particle_test.py
ros_ws/src/cmcl/cmcl_ros/rviz/: cmcl_real.rviz
ros_ws/src/cmcl/cmcl_ros/src/: Depth4DetectionNode.cpp  DetectionNoiseNode.cpp  EvalNode.cpp  LidarScan2PointCloudNode.cpp  MCLNode.cpp  MapLoaderNode.cpp  OprtitrackPublisherNode.cpp  RelativePosedNode.cpp  UVDetection2WorldNode.cpp
