



add_library(NCORE MCL.cpp DistributionExchange.cpp BeamEnd.cpp Resampling.cpp SetStatistics.cpp ParticleFilter.cpp Particle.cpp Lidar2D.cpp GMap.cpp FSR.cpp KMeansClustering.cpp Cluster.cpp ProrokClustering.cpp GoodPointsCompression.cpp StandardThinning.cpp DensityEstimationTree.cpp ClusterAbstraction.cpp Utils.cpp)




